--- a/tinymce.html
+++ b/tinymce.html
@@ -19,5 +19,12 @@
 </head>
 <body>
   <textarea>Γράψτε το κέιμενο εδώ:</textarea>
+
+  <hr>
+  <p onselectstart="return false" onpaste="return false;" onCopy="return false" onCut="return false" onDrag="return false" onDrop="return false" >
+At w3schools.com you will learn how to make a website.<BR>
+
+ We offer free tutorials in all web development technologies. 
+</p>
 </body>
 </html>
