--- a/tinymce.html
+++ b/tinymce.html
@@ -11,7 +11,12 @@
   </script>
   <script>tinymce.init({
   	selector:'textarea',
-  	language: 'el'
+  	language: 'el',
+    menubar: 'file edit view insert format tools table help',
+  toolbar: 'undo redo | bold italic underline strikethrough | fontselect fontsizeselect formatselect | alignleft aligncenter alignright alignjustify | outdent indent |  numlist bullist | forecolor backcolor removeformat | pagebreak | charmap emoticons | fullscreen  preview save print | insertfile image media template link anchor codesample | ltr rtl',
+  //toolbar_sticky: true,
+  
+
 
 
 	});
