191203b fixed entity_encoding:raw,set textarea height

--- a/tinymce.html
+++ b/tinymce.html
@@ -12,6 +12,8 @@
   <script>tinymce.init({
   	selector:'textarea',
   	language: 'el',
+    entity_encoding: "raw",
+    height: "300",
     menubar: 'file edit view insert format tools table help',
   toolbar: 'undo redo | bold italic underline strikethrough | fontselect fontsizeselect formatselect | alignleft aligncenter alignright alignjustify | outdent indent |  numlist bullist | forecolor backcolor removeformat | pagebreak | charmap emoticons | fullscreen  preview save print | insertfile image media template link anchor codesample | ltr rtl',
   //toolbar_sticky: true,
