--- a/tinymce_template_form.html
+++ b/tinymce_template_form.html
@@ -12,6 +12,8 @@
   <script>tinymce.init({
   	selector:'textarea',
   	language: 'el',
+    entity_encoding: "raw",
+    height: "300",
     menubar: 'file edit view insert format tools table help',
     plugins: [
             "code"
