191203b fixed entity_encoding:raw,set textarea height

--- a/tinymce.html
+++ b/tinymce.html
@@ -26,7 +26,8 @@
 </head>
 <body>
   <form>
-  <textarea>Γράψτε το κέιμενο εδώ:</textarea>
+
+  <textarea></textarea>
   </form>
   <hr>
   <p onselectstart="return false" onpaste="return false;" onCopy="return false" onCut="return false" onDrag="return false" onDrop="return false" >
