191217 28oct +25march lyrics

--- a/tinymce.html
+++ b/tinymce.html
@@ -15,6 +15,9 @@
     entity_encoding: "raw",
     height: "300",
     menubar: 'file edit view insert format tools table help',
+    plugins: [
+             "table"
+    ],    
   toolbar: 'undo redo | bold italic underline strikethrough | fontselect fontsizeselect formatselect | alignleft aligncenter alignright alignjustify | outdent indent |  numlist bullist | forecolor backcolor removeformat | pagebreak | charmap emoticons | fullscreen  preview save print | insertfile image media template link anchor codesample | ltr rtl',
   //toolbar_sticky: true,
   
@@ -30,6 +33,9 @@
   </form>
   <hr>
   <p onselectstart="return false" onpaste="return false;" onCopy="return false" onCut="return false" onDrag="return false" onDrop="return false" >
+
+
+    
 At w3schools.com you will learn how to make a website.<BR>
 
  We offer free tutorials in all web development technologies. 
