--- a/tinymce_template_form.html
+++ b/tinymce_template_form.html
@@ -16,7 +16,7 @@
     height: "300",
     menubar: 'file edit view insert format tools table help',
     plugins: [
-            "code"
+             "table","code"
     ],
   toolbar: ['undo redo | bold italic underline strikethrough | fontselect fontsizeselect formatselect | forecolor backcolor removeformat ',' alignleft aligncenter alignright alignjustify | outdent indent |  numlist bullist | pagebreak | charmap emoticons | fullscreen  preview save print | insertfile image media template link anchor codesample | code '],
 
