--- a/tinymce_template_form.html
+++ b/tinymce_template_form.html
@@ -72,11 +72,7 @@
   <input type="submit">
   </form>
   <hr>
-  <p onselectstart="return false" onpaste="return false;" onCopy="return false" onCut="return false" onDrag="return false" onDrop="return false" >
-At w3schools.com you will learn how to make a website.<BR>
-
- We offer free tutorials in all web development technologies. 
-</p>
+  <p onselectstart="return false" onpaste="return false;" onCopy="return false" onCut="return false" onDrag="return false" onDrop="return false" ><div id="probeserver"></div></p>
 <!-- FUNCTIONS #################### -->
 <script src="tinymce_lesson_js_footer.js" type="text/javascript"></script>
 <script>
