--- a/tinymce_template_form_empty.html
+++ b/tinymce_template_form_empty.html
@@ -32,22 +32,15 @@
   <form action="return_request.php" target="_blank" method="POST" >
   <textarea name="mytext" ><table style="border-collapse: collapse; width: 100%; height: 432px;" border="1">
 <tbody>
- <div id="probeserver"></div>
 </tbody>
 </table>
-
-
   </textarea>
 
 
   <input type="submit">
   </form>
   <hr>
-  <p onselectstart="return false" onpaste="return false;" onCopy="return false" onCut="return false" onDrag="return false" onDrop="return false" >
-At w3schools.com you will learn how to make a website.<BR>
-
- We offer free tutorials in all web development technologies. 
-</p>
+  <p onselectstart="return false" onpaste="return false;" onCopy="return false" onCut="return false" onDrag="return false" onDrop="return false" ><div id="probeserver"></div></p>
 <!-- FUNCTIONS #################### -->
 <script src="tinymce_lesson_js_footer.js" type="text/javascript"></script>
 <script>
