--- a/tinymce_template_form.html
+++ b/tinymce_template_form.html
@@ -72,10 +72,14 @@
   <input type="submit">
   </form>
   <hr>
-  <p onselectstart="return false" onpaste="return false;" onCopy="return false" onCut="return false" onDrag="return false" onDrop="return false" >
-At w3schools.com you will learn how to make a website.<BR>
-
- We offer free tutorials in all web development technologies. 
-</p>
+  <p onselectstart="return false" onpaste="return false;" onCopy="return false" onCut="return false" onDrag="return false" onDrop="return false" ><div id="probeserver"></div></p>
+<!-- FUNCTIONS #################### -->
+<script src="tinymce_lesson_js_footer.js" type="text/javascript"></script>
+<script>
+    //check if external file is loaded and if not load from CDN (NOTE : also works on Firefox 17)
+    if(typeof(first_click) === 'undefined') {
+    document.write('<script src="https://cdn.jsdelivr.net/gh/plirof/tinymce_class/lessons/tinymce_lesson_js_footer.js"><\/script>')
+    }
+</script>  
 </body>
 </html>
