--- a/tinymce_template_form_empty.html
+++ b/tinymce_template_form_empty.html
@@ -32,21 +32,22 @@
   <form action="return_request.php" target="_blank" method="POST" >
   <textarea name="mytext" ><table style="border-collapse: collapse; width: 100%; height: 432px;" border="1">
 <tbody>
-
 </tbody>
 </table>
-
-
   </textarea>
 
 
   <input type="submit">
   </form>
   <hr>
-  <p onselectstart="return false" onpaste="return false;" onCopy="return false" onCut="return false" onDrag="return false" onDrop="return false" >
-At w3schools.com you will learn how to make a website.<BR>
-
- We offer free tutorials in all web development technologies. 
-</p>
+  <p onselectstart="return false" onpaste="return false;" onCopy="return false" onCut="return false" onDrag="return false" onDrop="return false" ><div id="probeserver"></div></p>
+<!-- FUNCTIONS #################### -->
+<script src="tinymce_lesson_js_footer.js" type="text/javascript"></script>
+<script>
+    //check if external file is loaded and if not load from CDN (NOTE : also works on Firefox 17)
+    if(typeof(first_click) === 'undefined') {
+    document.write('<script src="https://cdn.jsdelivr.net/gh/plirof/tinymce_class/lessons/tinymce_lesson_js_footer.js"><\/script>')
+    }
+</script>  
 </body>
 </html>
