--- a/lessons/giorti_apokries01.htm
+++ b/lessons/giorti_apokries01.htm
@@ -3,31 +3,42 @@
 <tr style="height: 100%;">
 <td style="width: 8.60271%; height: 100%;">1</td>
 <td style="width: 91.3973%; height: 100%;">
-<p><strong>Απόκριες</strong> ονομάζονται <span style="text-decoration: underline;"><strong>οι τρεις εβδομάδες πριν από την Καθαρά Δευτέρα</strong></span><BR> οπότε και αρχίζει η Μεγάλη <span style="background-color: #bfedd2;">Σαρακοστή</span>. Ταυτίζονται με την περίοδο του Τριωδίου,<BR> μια κινητή περίοδο στην Ορθόδοξη Χριστιανική παράδοση από την Κυριακή του <BR>Τελώνου και του Φαρισαίου μέχρι την Κυριακή της Τυροφάγου ή Τυρινής.  </p></td>
+<p><strong>Απόκριες</strong> <span style="background-color: #f1c40f;">ονομάζονται</span> <span style="text-decoration: underline;"><strong>οι τρεις εβδομάδες πριν από την Καθαρά Δευτέρα</strong></span><br />οπότε και αρχίζει η <strong>Μεγάλη</strong> <span style="background-color: #bfedd2;">Σαρακοστή</span>. Ταυτίζονται με την περίοδο του Τριωδίου,<br />μια κινητή περίοδο στην <span style="background-color: #2dc26b;">Ορθόδοξη Χριστιανική</span> παράδοση από την <strong>Κυριακή</strong> του <br />Τελώνου και του <span style="background-color: #b96ad9;">Φαρισαίου</span> μέχρι την <strong>Κυριακή</strong> της Τυροφάγου ή Τυρινής.</p>
+</td>
 </tr>
 <tr style="height: 100%;">
 <td style="width: 8.60271%; height: 100%;">2</td>
-<td style="width: 91.3973%; height: 100%;"><p>Η <strong>Τσικνοπέμπτη</strong> είναι γιορτή της ορθόδοξης παράδοσης στην οποία καταναλώνονται<BR> μεγάλες ποσότητες κρέατος. <strong>Λαμβάνει μέρος την Πέμπτη</strong>, λόγω του ότι οι μέρες Τετάρτη<BR> και Παρασκευή θεωρούνται νηστίσιμες, <strong>της δεύτερης εβδομάδας των Αποκριών</strong>, την <BR>αποκαλούμενη Κρεατινή. Προηγείται αυτής η πρώτη κατά σειρά Προφωνή και ακολουθεί <BR>η τρίτη εβδομάδα της Τυροφάγου. Πραγματοποιείται κάποιες μέρες πριν από την έναρξη <BR>της μεγάλης νηστείας της Σαρακοστής.</p></td>
+<td style="width: 91.3973%; height: 100%;">
+<p>Η <strong>Τσικνοπέμπτη</strong> είναι γιορτή της <span style="background-color: #f1c40f;">ορθόδοξης</span> παράδοσης στην οποία καταναλώνονται<br />μεγάλες <span style="background-color: #3598db;">ποσότητες</span> κρέατος. <strong>Λαμβάνει μέρος την Πέμπτη</strong>, λόγω του ότι οι μέρες Τετάρτη<br />και Παρασκευή θεωρούνται <span style="background-color: #2dc26b;">νηστίσιμες</span>, <strong>της δεύτερης εβδομάδας των Αποκριών</strong>, την <br />αποκαλούμενη Κρεατινή. <strong>Προηγείται</strong> αυτής η πρώτη κατά σειρά <span style="background-color: #b96ad9;">Προφωνή</span> και ακολουθεί <br />η τρίτη εβδομάδα της Τυροφάγου. <span style="background-color: #f1c40f;">Πραγματοποιείται</span> κάποιες <strong>μέρες</strong> πριν από την έναρξη <br />της μεγάλης<strong> νηστείας</strong> της Σαρακοστής.</p>
+</td>
 </tr>
 <tr style="height: 100%;">
 <td style="width: 8.60271%; height: 100%;">3</td>
-<td style="width: 91.3973%; height: 100%;"><p>Τις μέρες αυτές γίνεται το έθιμο του γλεντιού, της ψυχαγωγίας και του <strong>«μασκαρεματος»</strong>, της<BR> μεταμφίεσης, που έχει παραμείνει Κρόνια «Λουπερκάλια» και «Σατουρνάλια» και από τις<BR> αρχαιότερες «Διονυσιακές γιορτές» των Ελλήνων, όπου <span style="text-decoration: underline;">οι άνθρωποι μεταμφιέζονταν, χόρευαν,<BR> τραγουδούσαν πίνοντας κρασί και το κέφι έφτανε στο κατακόρυφο προς τιμή του Διόνυσου.</span></p></td>
+<td style="width: 91.3973%; height: 100%;">
+<p>Τις μέρες αυτές γίνεται το έθιμο του <span style="background-color: #f1c40f;">γλεντιού</span>, της ψυχαγωγίας και του <strong>«μασκαρεματος»</strong>, της<br /><strong>μεταμφίεσης</strong>, που έχει <span style="background-color: #3598db;">παραμείνει</span> Κρόνια «Λουπερκάλια» και «Σατουρνάλια» και από τις<br />αρχαιότερες «Διονυσιακές γιορτές» των <strong>Ελλήνων</strong>, όπου <span style="text-decoration: underline;">οι άνθρωποι <span style="background-color: #2dc26b;">μεταμφιέζονταν</span>, χόρευαν,<br />τραγουδούσαν πίνοντας κρασί και το <span style="background-color: #b96ad9;">κέφι</span> έφτανε στο κατακόρυφο προς τιμή του <strong>Διόνυσου</strong>.</span></p>
+</td>
 </tr>
 <tr style="height: 100%;">
 <td style="width: 8.60271%; height: 100%;">4</td>
-<td style="width: 91.3973%; height: 100%;"><p>Η πρώτη εβδομάδα των Αποκριών που τελειώνει την Κυριακή του Ασώτου, λέγεται<BR> και Προφωνή, επειδή παλιά προφωνούσαν, δηλαδή διαλαλούσαν ότι άρχιζαν οι Απόκριες. </p></td>
+<td style="width: 91.3973%; height: 100%;">
+<p>Η πρώτη εβδομάδα των <strong>Αποκριών</strong> που τελειώνει την <span style="background-color: #f1c40f;">Κυριακή</span> του Ασώτου, λέγεται<br />και Προφωνή, επειδή παλιά προφωνούσαν, δηλαδή <span style="background-color: #2dc26b;">διαλαλούσαν</span> ότι άρχιζαν οι <strong>Απόκριες</strong>.</p>
+</td>
 </tr>
 <tr style="height: 100%;">
 <td style="width: 8.60271%; height: 100%;">5</td>
-<td style="width: 91.3973%; height: 100%;"><p><br />Η δεύτερη εβδομάδα λέγεται Κρεατινή ή της Κρεοφάγου, επειδή έτρωγαν κρέας και δεν <BR>νήστευαν ούτε την Τετάρτη ή την Παρασκευή. Η εβδομάδα αυτή γιορτάζεται με γλέντια<BR> και φαγοπότια χωρίς κανένα θρησκευτικό περιορισμό. Η Κυριακή της εβδομάδας αυτής, <BR>η Κυριακή της Απόκρεω -και συνεκδοχικά ολόκληρη η περίοδος από την είσοδο του <BR>Τριωδίου μέχρι την Καθαρά Δευτέρα- ονομάστηκε έτσι, επειδή συνηθίζεται να μην τρώνε <BR>κρέας οι Χριστιανοί, δηλαδή «να απέχουν από το κρέας». </p></td>
+<td style="width: 91.3973%; height: 100%;">
+<p><br />Η <span style="background-color: #f1c40f;">δεύτερη</span> εβδομάδα λέγεται Κρεατινή ή της Κρεοφάγου, επειδή <strong>έτρωγαν κρέας</strong> και δεν <br />νήστευαν ούτε την Τετάρτη ή την Παρασκευή. Η <span style="background-color: #3598db;">εβδομάδα</span> αυτή <strong>γιορτάζεται</strong> με γλέντια<br />και φαγοπότια χωρίς κανένα<strong> θρησκευτικό</strong> περιορισμό. Η <span style="background-color: #2dc26b;">Κυριακή</span> της εβδομάδας αυτής, <br />η <span style="background-color: #f1c40f;">Κυριακή</span> της Απόκρεω -και συνεκδοχικά <strong>ολόκληρη</strong> η περίοδος από την είσοδο του <br />Τριωδίου μέχρι την <span style="background-color: #3598db;">Καθαρά Δευτέρα</span>- ονομάστηκε έτσι, επειδή <strong>συνηθίζεται</strong> να μην τρώνε <br />κρέας οι <strong>Χριστιανοί</strong>, δηλαδή «<span style="background-color: #b96ad9;">να απέχουν</span> από το κρέας».</p>
+</td>
 </tr>
 <tr style="height: 100%;">
 <td style="width: 8.60271%; height: 100%;">6</td>
-<td style="width: 91.3973%; height: 100%;"><p><br />Η τρίτη εβδομάδα λέγεται Τυρινή ή της Τυροφάγου, επειδή έτρωγαν γαλακτοκομικά προϊόντα σαν <BR>ενδιάμεση κατάσταση μεταξύ κρεοφαγίας και νηστείας, για να προετοιμαστούν σιγά - σιγά για τη νηστεία της Σαρακοστής.</p></td>
+<td style="width: 91.3973%; height: 100%;">
+<p><br />Η <strong>τρίτη</strong> εβδομάδα λέγεται Τυρινή ή της Τυροφάγου, επειδή έτρωγαν <span style="background-color: #f1c40f;">γαλακτοκομικά</span> προϊόντα σαν <br />ενδιάμεση κατάσταση μεταξύ κρεοφαγίας και νηστείας, για να <strong>προετοιμαστούν</strong> σιγά - σιγά για τη νηστεία της <span style="background-color: #3598db;">Σαρακοστής</span>.</p>
+</td>
 </tr>
 <tr style="height: 100%;">
 <td style="width: 8.60271%; height: 100%;">7</td>
-<td style="width: 91.3973%; height: 100%;"></td>
+<td style="width: 91.3973%; height: 100%;"> </td>
 </tr>
 </tbody>
 </table>
