200109a text_tsanta_sxoleio.htm update

--- a/lessons/text_tsanta_sxoleio.htm
+++ b/lessons/text_tsanta_sxoleio.htm
@@ -3,25 +3,25 @@
 <tr style="height: 100%;">
 <td style="width: 8.60271%; height: 100%;">1</td>
 <td style="width: 91.3973%; height: 100%;">
-<p>Αγαπητοί γονείς, Με την παρούσα επιστολή θα θέλαμε να σας ενημερώσουμε για τη νέα <br />δράση του Υπουργείου Παιδείας, Έρευνας και Θρησκευμάτων με τίτλο «Η τσάντα στο σχολείο».</p>
+<p><strong>Αγαπητοί γονείς</strong>, Με την<span style="background-color: #b96ad9;"> παρούσα</span> <em>επιστολή</em> θα θέλαμε να σας <span style="text-decoration: underline;">ενημερώσουμε</span> για τη νέα <br />δράση του <strong>Υπουργείου</strong> <span style="text-decoration: underline;">Παιδείας</span>, Έρευνας και <span style="background-color: #2dc26b;">Θρησκευμάτων</span> με τίτλο «Η τσάντα στο σχολείο».</p>
 </td>
 </tr>
 <tr style="height: 100%;">
 <td style="width: 8.60271%; height: 100%;">2</td>
 <td style="width: 91.3973%; height: 100%;">
-<p>Με τη συγκεκριμένη δράση καθιερώνεται η παραμονή της σχολικής τσάντας των <br />μαθητών/τριών του Δημοτικού Σχολείου για τουλάχιστον ένα Σαββατοκύριακο το <br />μήνα, στο σχολείο. Η τσάντα των μαθητών/τριών παραμένει στο σχολείο την <br />Παρασκευή, πριν από το Σαββατοκύριακο που έχει αποφασιστεί από το <br />Σύλλογο Διδασκόντων του Σχολείου, έως τη Δευτέρα.. </p>
+<p>Με τη <strong>συγκεκριμένη</strong> δράση <span style="background-color: #b96ad9;">καθιερώνεται</span> η <span style="text-decoration: underline;">παραμονή</span> της σχολικής τσάντας των <br />μαθητών/τριών του<strong> Δημοτικού</strong> Σχολείου για <span style="text-decoration: underline;">τουλάχιστον</span> ένα <span style="background-color: #2dc26b;">Σαββατοκύριακο</span> το <br />μήνα, στο <span style="background-color: #3598db;">σχολείο</span>. Η <strong>τσάντα</strong> των μαθητών/τριών <span style="text-decoration: underline;">παραμένει</span> στο σχολείο την <br />Παρασκευή, <span style="background-color: #f1c40f;">πριν </span>από το <strong>Σαββατοκύριακο</strong> που έχει <span style="text-decoration: underline;">αποφασιστεί</span> από το <br />Σύλλογο<strong> Διδασκόντων</strong> του <span style="text-decoration: underline;">Σχολείου</span>, έως τη <span style="background-color: #2dc26b;">Δευτέρα</span>..</p>
 </td>
 </tr>
 <tr style="height: 100%;">
 <td style="width: 8.60271%; height: 100%;">3</td>
 <td style="width: 91.3973%; height: 100%;">
-<p>Σκοπός της δράσης αυτής είναι οι μαθητές/τριες να μην ασχολούνται με την προετοιμασία<br />μαθημάτων κατά τη διάρκεια του Σαββατοκύριακου και να αφιερωθεί αυτός ο χρόνος στη <br />δημιουργική επαφή και επικοινωνία γονέων – παιδιών. </p>
+<p>Σκοπός της <strong>δράσης</strong> αυτής είναι οι <span style="background-color: #b96ad9;">μαθητές/τριες</span> να μην<span style="text-decoration: underline;"> ασχολούνται</span> με την προετοιμασία<br />μαθημάτων κατά τη <span style="text-decoration: underline;">διάρκεια</span> του <strong>Σαββατοκύριακου</strong> και να<span style="background-color: #2dc26b;"> αφιερωθεί</span> αυτός ο χρόνος στη <br />δημιουργική<span style="text-decoration: underline;"> επαφή</span> και <strong>επικοινωνία</strong> <span style="background-color: #3598db;">γονέων</span> – παιδιών.</p>
 </td>
 </tr>
 <tr style="height: 100%;">
 <td style="width: 8.60271%; height: 100%;">4</td>
 <td style="width: 91.3973%; height: 100%;">
-<p>Εμείς ως Σύλλογος Διδασκόντων αποφασίσαμε να εφαρμόσουμε αυτή τη δράση κάθε τελευταία<br />Παρασκευή του μήνα και ευελπιστούμε τα Σαββατοκύριακα αυτά να τα περνάτε ευχάριστα και <br />δημιουργικά με τα παιδιά σας. Η Δ/ντρια και το Διδακτικό Προσωπικό </p>
+<p>Εμείς ως <strong>Σύλλογος</strong> Διδασκόντων<span style="text-decoration: underline;"> αποφασίσαμε</span> να <span style="background-color: #b96ad9;">εφαρμόσουμε</span> αυτή τη δράση κάθε τελευταία<br />Παρασκευή του μήνα και <strong>ευελπιστούμε</strong> τα <span style="text-decoration: underline;">Σαββατοκύριακα</span> αυτά να τα περνάτε <span style="background-color: #f1c40f;">ευχάριστα</span> και <br />δημιουργικά με τα <strong>παιδιά</strong> σας. Η Δ/ντρια και το <span style="text-decoration: underline;">Διδακτικό</span> <span style="background-color: #2dc26b;">Προσωπικό.</span></p>
 </td>
 </tr>
 <tr style="height: 100%;">
