190110 added gecko_spellcheck : true, in-browser dictionary enabled

--- a/tinymce_template_form.html
+++ b/tinymce_template_form.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
- <!-- <script src="https://cdn.tiny.cloud/1/no-api-key/tinymce/5/tinymce.min.js" referrerpolicy="origin">
+  <!-- <script src="https://cdn.tiny.cloud/1/no-api-key/tinymce/5/tinymce.min.js" referrerpolicy="origin">
   	
 
   </script>-->
@@ -18,7 +18,8 @@
     plugins: [
              "table","code"
     ],
-  toolbar: ['undo redo | bold italic underline strikethrough | fontselect fontsizeselect formatselect | forecolor backcolor removeformat ',' alignleft aligncenter alignright alignjustify | outdent indent |  numlist bullist | pagebreak | charmap emoticons | fullscreen  preview save print | insertfile image media template link anchor codesample | code '],
+    toolbar: ['undo redo | bold italic underline strikethrough | fontselect fontsizeselect formatselect | forecolor backcolor removeformat ',' alignleft aligncenter alignright   alignjustify | outdent indent |  numlist bullist | pagebreak | charmap emoticons | fullscreen  preview save print | insertfile image media template link anchor codesample | code '],
+    gecko_spellcheck : true,
     //table_responsive_width: true,
 
   //toolbar_sticky: true,
@@ -26,8 +27,8 @@
 
 
 
-	});
-</script>
+	 });
+  </script>
 </head>
 <body>
   <form action="return_request.php" target="_blank" method="POST" >
