--- a/tinymce.html
+++ b/tinymce.html
@@ -19,6 +19,7 @@
              "table"
     ],    
   toolbar: 'undo redo | bold italic underline strikethrough | fontselect fontsizeselect formatselect | alignleft aligncenter alignright alignjustify | outdent indent |  numlist bullist | forecolor backcolor removeformat | pagebreak | charmap emoticons | fullscreen  preview save print | insertfile image media template link anchor codesample | ltr rtl',
+      gecko_spellcheck : true,
   //toolbar_sticky: true,
   //table_responsive_width: true,
   
