--- a/tinymce.html
+++ b/tinymce.html
@@ -16,7 +16,7 @@
     height: "300",
     menubar: 'file edit view insert format tools table help',
     plugins: [
-             "table"
+             "table","image"
     ],    
   toolbar: 'undo redo | bold italic underline strikethrough | fontselect fontsizeselect formatselect | alignleft aligncenter alignright alignjustify | outdent indent |  numlist bullist | forecolor backcolor removeformat | pagebreak | charmap emoticons | fullscreen  preview save print | insertfile image media template link anchor codesample | ltr rtl',
   //toolbar_sticky: true,
