--- a/tinymce_template_form_empty.html
+++ b/tinymce_template_form_empty.html
@@ -19,6 +19,7 @@
              "table","code","image"
     ],
   toolbar: ['undo redo | bold italic underline strikethrough | fontselect fontsizeselect formatselect | forecolor backcolor removeformat ',' alignleft aligncenter alignright alignjustify | outdent indent |  numlist bullist | pagebreak | charmap emoticons | fullscreen  preview save print | insertfile image media template link anchor codesample | code '],
+      gecko_spellcheck : true,
   //table_responsive_width: true,
   //toolbar_sticky: true,
   
