200112 updated month_jan

--- a/lessons/month_jan.htm
+++ b/lessons/month_jan.htm
@@ -3,25 +3,25 @@
 <tr style="height: 100%;">
 <td style="width: 8.60271%; height: 100%;">1</td>
 <td style="width: 91.3973%; height: 100%;">
-<p>Εορτές τον Ιανουάριο. Εκτός από τα έθιμα πλούσιο είναι και το εορτολόγιο του Ιανουαρίου<br />αρχίζοντας με την γιορτή του Αγίου Βασιλείου την πρώτη του μήνα και τελειώνοντας με την γιορτή<br />των Τριών Ιεραρχών στα τέλη του. Ενδιάμεσα έχουμε την γιορτή των Θεοφανίων (στις 6), του Αϊ-Γιάννη <br />(στις 7), του Αγίου Γρηγορίου (στις 25) αλλά και τις εορτές των δύο μεγάλων αγίων του πρώιμου <br />αιγυπτιακού χριστιανισμού: του Μεγάλου Αντωνίου (στις 17) και του Αθανασίου (στις 18).</p>
+<p>Εορτές τον <strong>Ιανουάριο</strong>. Εκτός από τα έθιμα πλούσιο είναι και το <span style="background-color: #2dc26b;">εορτολόγιο</span> του Ιανουαρίου<br />αρχίζοντας με την <span style="background-color: #b96ad9;">γιορτή</span> του <strong>Αγίου Βασιλείου</strong> την πρώτη του μήνα και τελειώνοντας με την γιορτή<br />των <span style="background-color: #3598db;">Τριών Ιεραρχών</span> στα τέλη του. Ενδιάμεσα έχουμε την γιορτή των <strong>Θεοφανίων</strong> (στις 6), του Αϊ-Γιάννη <br />(στις 7), του <strong>Αγίου Γρηγορίου</strong> (στις 25) αλλά και τις <span style="background-color: #2dc26b;">εορτές</span> των δύο μεγάλων αγίων του πρώιμου <br />αιγυπτιακού χριστιανισμού: του <strong>Μεγάλου Αντωνίου</strong> (στις 17) και του <span style="background-color: #e03e2d;">Αθανασίου</span> (στις 18).</p>
 </td>
 </tr>
 <tr style="height: 100%;">
 <td style="width: 8.60271%; height: 100%;">2</td>
 <td style="width: 91.3973%; height: 100%;">
-<p>Ο Ιανουάριος, ωστόσο, δεν ήταν ανέκαθεν ο πρώτος μήνας του έτους για τους Ρωμαίους. Στα<br />πρώτα χρόνια της ιστορίας τους, πρώτις μήνας ήταν ο Μάρτιος, από το όνομα του πολεμικού <br />θεού τους Mars-Martis (δηλαδή του Άρη των Ελλήνων). Πρωτοχρονιά ήταν τότε η πρώτη <br />Μαρτίου, η οποία εξακολούθησε να γιορτάζεται και στα κατοπινά χρόνια. Και επειδή θυμούνταν <br />πως αυτή ήταν η αρχική τους πρωτοχρονιά, την έλεγαν πάτριον. Ο Ιανουάριος έγινε πρώτος<br />μήνας αργότερα, όταν ο μυθικός βασιλιάς των Ρωμαίων Νούμας Πομπίλιος οργάνωσε το ημερολόγιο με βάση τον ήλιο. </p>
+<p>Ο <strong>Ιανουάριος</strong>, ωστόσο, <span style="background-color: #b96ad9;">δεν ήταν</span> ανέκαθεν ο πρώτος μήνας του έτους για τους Ρωμαίους. Στα<br />πρώτα χρόνια της <strong>ιστορίας</strong> τους, πρώτις μήνας ήταν ο <span style="background-color: #2dc26b;">Μάρτιος</span>, από το όνομα του πολεμικού <br />θεού τους Mars-Martis (δηλαδή του<span style="background-color: #3598db;"> Άρη των Ελλήνων</span>). <strong>Πρωτοχρονιά</strong> ήταν τότε η πρώτη <br />Μαρτίου, η οποία <strong>εξακολούθησε</strong> να <span style="background-color: #b96ad9;">γιορτάζεται</span> και στα κατοπινά χρόνια. Και επειδή θυμούνταν <br />πως αυτή ήταν η αρχική τους <span style="background-color: #2dc26b;">πρωτοχρονιά</span>, την έλεγαν πάτριον. Ο<strong> Ιανουάριος</strong> έγινε πρώτος<br />μήνας <strong>αργότερα</strong>, όταν ο μυθικός βασιλιάς των Ρωμαίων Νούμας Πομπίλιος <span style="background-color: #e03e2d;">οργάνωσε το ημερολόγιο</span> με βάση τον ήλιο.</p>
 </td>
 </tr>
 <tr style="height: 100%;">
 <td style="width: 8.60271%; height: 100%;">3</td>
 <td style="width: 91.3973%; height: 100%;">
-<p>Ο Ιανουάριος είναι επίσης γνωστός και ως καλαντάρης από τα κάλαντα της Πρωτοχρονιάς <br />και τα δώρα των Καλενδών του Ιανουαρίου. Ο <strong>Ιανουάριος</strong> πήρε το όνομά του από τον Ιανό,<br />θεό κάθε αρχής στη ρωμαϊκή μυθολογία.Όπως <strong>αναφέρει</strong> σχετικά και ο Ηλίας Αναγνωστάκης: </p>
+<p>Ο<strong> Ιανουάριος</strong> είναι επίσης γνωστός και ως καλαντάρης από τα <span style="background-color: #b96ad9;">κάλαντα</span> της Πρωτοχρονιάς <br />και τα <span style="background-color: #2dc26b;">δώρα</span> των Καλενδών του Ιανουαρίου. Ο <strong>Ιανουάριος</strong> πήρε το όνομά του από τον Ιανό,<br />θεό κάθε αρχής στη ρωμαϊκή <span style="background-color: #3598db;">μυθολογία</span>.Όπως <strong>αναφέρει</strong> σχετικά και ο Ηλίας Αναγνωστάκης.</p>
 </td>
 </tr>
 <tr style="height: 100%;">
 <td style="width: 8.60271%; height: 100%;">4</td>
 <td style="width: 91.3973%; height: 100%;">
-<p>…ο Ιανός ήταν θεός δίμορφος, που παριστάνεται πότε με κλειδιά ή με τριακόσιες ψήφους στο <br />δεξί του χέρι και εξήντα πέντε στο αριστερό, όσες οι μέρες του ενιαυτού. Εκαλείτο δε και <br />«Αιωνάριος» αντί Ιανουάριος, επειδή τον θεωρούσαν του αιώνος πατέρα. Είχαν μάλιστα οριστεί <br />δώδεκα πρυτάνεις να τον υμνούν και υπήρχε δωδεκάβωμον στο ναό του, όσοι και οι μήνες του έτους. </p>
+<p>…ο Ιανός ήταν θεός <span style="background-color: #2dc26b;">δίμορφος</span>, που παριστάνεται πότε με<strong> κλειδιά</strong> ή με τριακόσιες ψήφους στο <br />δεξί του χέρι και <strong>εξήντα</strong> πέντε στο αριστερό, όσες οι <span style="background-color: #b96ad9;">μέρες</span> του ενιαυτού. Εκαλείτο δε και <br />«Αιωνάριος» αντί <strong>Ιανουάριος</strong>, επειδή τον <span style="background-color: #2dc26b;">θεωρούσαν</span> του αιώνος πατέρα. Είχαν μάλιστα οριστεί <br />δώδεκα <span style="background-color: #3598db;">πρυτάνεις</span> να τον υμνούν και υπήρχε <strong>δωδεκάβωμον</strong> στο ναό του, όσοι και οι μήνες του έτους.</p>
 </td>
 </tr>
 <tr style="height: 100%;">
