200112 fixed no-copy (put it inside <div>)

--- a/lessons/xmas_trigona.htm
+++ b/lessons/xmas_trigona.htm
@@ -3,7 +3,7 @@
 <tr style="height: 100%;">
 <td style="width: 8.60271%; height: 100%;">1</td>
 <td style="width: 91.3973%; height: 100%;">
-<p>Τρίγωνα, κάλαντα, σκόρπισαν παντού κάθε σπίτι μια φωλιά του μικρού <br />Χριστού, τρίγωνα κάλαντα μες στη γειτονιά ήρθαν τα Χριστούγεννα κι η <br />Πρωτοχρονιά Άστρο φωτεινό, θα `βγει γιορτινό μήνυμα θα φέρει από τον ουρανό </p>
+<p>Τρίγωνα, κάλαντα, σκόρπισαν παντού κάθε σπίτι μια φωλιά του μικρού Χριστού,<br />τρίγωνα κάλαντα μες στη γειτονιά ήρθαν τα Χριστούγεννα κι η Πρωτοχρονιά <br />Άστρο φωτεινό, θα `βγει γιορτινό μήνυμα θα φέρει από τον ουρανό </p>
 </td>
 </tr>
 <tr style="height: 100%;">
