--- a/tinymce.html
+++ b/tinymce.html
@@ -35,7 +35,7 @@
   </form>
   <hr>
   <p onselectstart="return false" onpaste="return false;" onCopy="return false" onCut="return false" onDrag="return false" onDrop="return false" >
-  <div id="probeserver"></div>
+  <div id="probeserver" onselectstart="return false" onpaste="return false;" onCopy="return false" onCut="return false" onDrag="return false" onDrop="return false" ></div>
       <BR>____________
 </p>
 <!-- FUNCTIONS #################### -->
