200112 table_toolbar :  , //Disables the internal table popup toolbar

--- a/tinymce_template_form.html
+++ b/tinymce_template_form.html
@@ -19,6 +19,7 @@
              "table","code","image"
     ],
     toolbar: ['undo redo | bold italic underline strikethrough | fontselect fontsizeselect formatselect | forecolor backcolor removeformat ',' alignleft aligncenter alignright   alignjustify | outdent indent |  numlist bullist | pagebreak | charmap emoticons | fullscreen  preview save print | insertfile image media template link anchor codesample | code '],
+    table_toolbar : "" , //Disables the internal table popup toolbar 
     gecko_spellcheck : true,
     //table_responsive_width: true,
 
