--- a/lessons/month_jan.htm
+++ b/lessons/month_jan.htm
@@ -38,7 +38,7 @@
 </tr>
 <tr style="height: 100%;">
 <td style="width: 8.60271%; height: 100%;">7</td>
-<td style="width: 91.3973%; height: 100%;"> </td>
+<td style="width: 91.3973%; height: 100%;"> - <strong>Διαλυτικά:</strong> [για Linux + Win ] <span style="background-color: #e03e2d;">ταυτόχρονα Shift + ‘τόνος’ και μετά το φωνήεν.</span><br />- Διαλυτικά και τόνος όπως “Μαΐου”:    [για Linux] ταυτόχρονα Shift+ ‘τόνος‘, μετά ξανά ‘τόνος’ και μετά το φωνήεν.</td>
 </tr>
 </tbody>
 </table>
