--- a/tinymce.html
+++ b/tinymce.html
@@ -16,9 +16,9 @@
     height: "300",
     menubar: 'file edit view insert format tools table help',
     plugins: [
-             "table","image"
+             "table","image", 
     ],    
-    toolbar: 'undo redo | bold italic underline strikethrough | fontselect fontsizeselect formatselect | alignleft aligncenter alignright alignjustify | outdent indent |  numlist bullist | forecolor backcolor removeformat | pagebreak | charmap emoticons | fullscreen  preview save print | insertfile image media template link anchor codesample | ltr rtl',
+    toolbar: 'undo redo | bold italic underline strikethrough | fontselect fontsizeselect formatselect | outdent indent |  numlist bullist | forecolor | backcolor removeformat | pagebreak | charmap emoticons | fullscreen  preview save print | insertfile image media template link anchor codesample | alignleft aligncenter alignright alignjustify | ltr rtl',
     table_toolbar : "" , //Disables the internal table popup toolbar
      gecko_spellcheck : true,
   //toolbar_sticky: true,
