--- a/tinymce.html
+++ b/tinymce.html
@@ -18,7 +18,7 @@
     plugins: [
              "table","image", 
     ],    
-    toolbar: 'undo redo | bold italic underline strikethrough | fontselect fontsizeselect formatselect | outdent indent |  numlist bullist | forecolor | backcolor removeformat | pagebreak | charmap emoticons | fullscreen  preview save print | insertfile image media template link anchor codesample | alignleft aligncenter alignright alignjustify | ltr rtl',
+    toolbar: 'undo redo | bold italic underline strikethrough | fontselect fontsizeselect formatselect | outdent indent |  numlist bullist | backcolor removeformat | forecolor | pagebreak | charmap emoticons | fullscreen  preview save print | insertfile image media template link anchor codesample | alignleft aligncenter alignright alignjustify | ltr rtl',
     table_toolbar : "" , //Disables the internal table popup toolbar
      gecko_spellcheck : true,
   //toolbar_sticky: true,
